--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.5.2-dev+11
+version: 1.5.3+12
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -35,8 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  provider:
-  google_fonts:
+  glassmorphism: ^3.0.0
+  provider: ^6.1.2
+  google_fonts: ^6.2.1
   http: ^1.2.2
 
 dev_dependencies:
